Finished webpage header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	<body>
 		<div id="navbar">
 			<ul>
+				<li><a href="#">+Charlie</a></li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Images</a></li>
+				<li><img src="grid.png"/></li>
+				<li><img src="bell.png"/></li>
+				<li><img src="plussign.png"/></li>
+				<li><img src="profile.jpg" id="prof"/></li>
 			</ul>
 		</div>
 
