--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
 				<input type="submit" name="lucky" value="I'm Feeling Lucky">
 			</form>
 		</div>
-		<div id="footer"></div>
+		
+		<div id="footer">
+			<ul>
+				<div class="left">
+					<li><a href="#">Advertising</a></li>
+					<li><a href="#">Business</a></li>
+					<li><a href="#">About</a></li>
+				</div>
+				
+				<div class="right">
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Terms</a></li>
+					<li><a href="#">Settings</a></li>
+				</div>
+			</ul>
+		</div>
 	</body>
 </html>
